--- a/process/memo_0.1.properties
+++ b/process/memo_0.1.properties
@@ -3,9 +3,7 @@
   <TalendProperties:Property xmi:id="_F3wQ0CxjEea_r6tUEEHX3Q" id="_F3tNgCxjEea_r6tUEEHX3Q" label="memo" creationDate="2016-06-07T10:51:18.875+0700" modificationDate="2016-06-07T10:59:10.933+0700" version="0.1" statusCode="" item="_F3wQ0ixjEea_r6tUEEHX3Q" displayName="memo">
     <author href="../talend.project#_0fVzgixiEea_r6tUEEHX3Q"/>
   </TalendProperties:Property>
-  <TalendProperties:ItemState xmi:id="_F3wQ0SxjEea_r6tUEEHX3Q" path="" locked="true" lockDate="2016-06-07T10:51:19.354+0700">
-    <locker href="../talend.project#_0fVzgixiEea_r6tUEEHX3Q"/>
-  </TalendProperties:ItemState>
+  <TalendProperties:ItemState xmi:id="_F3wQ0SxjEea_r6tUEEHX3Q" path=""/>
   <TalendProperties:ProcessItem xmi:id="_F3wQ0ixjEea_r6tUEEHX3Q" property="_F3wQ0CxjEea_r6tUEEHX3Q" state="_F3wQ0SxjEea_r6tUEEHX3Q">
     <process href="memo_0.1.item#/"/>
   </TalendProperties:ProcessItem>
